--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>aaa</title>
+    <title>Vite App</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <div id="app"></div>
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
